@@ -33,6 +33,9 @@
  */
 #include "config.h"
 #define LOCKRET(func) func
+#ifdef ENABLE_LOCK_CHECKS
+#undef ENABLE_LOCK_CHECKS
+#endif
 #include "util/locks.h"
 
 void _ARC4_LOCK(void);
@@ -44,6 +47,10 @@ void _ARC4_LOCK(void)
 }
 
 void _ARC4_UNLOCK(void)
+{
+}
+
+void _ARC4_LOCK_DESTROY(void)
 {
 }
 #else /* !THREADS_DISABLED */
@@ -63,5 +70,13 @@ void _ARC4_LOCK(void)
 void _ARC4_UNLOCK(void)
 {
 	lock_quick_unlock(&arc4lock);
+}
+
+void _ARC4_LOCK_DESTROY(void)
+{
+	if(arc4lockinit) {
+		arc4lockinit = 0;
+		lock_quick_destroy(&arc4lock);
+	}
 }
 #endif /* THREADS_DISABLED */
