@@ -191,6 +191,13 @@ void log_set_time_asc(int use_asc)
 	log_time_asc = use_asc;
 }
 
+void* log_get_lock(void)
+{
+	if(!key_created)
+		return NULL;
+	return (void*)&log_lock;
+}
+
 void
 log_vmsg(int pri, const char* type,
 	const char *format, va_list args)
